Add modularity on jaxb modules